objects/SPM_Store_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>Account_Stores__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account_Stores</description>
        <inlineHelpText>Account_Stores</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Store_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Add</description>
        <inlineHelpText>Add</inlineHelpText>
        <label>Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Grow</description>
        <inlineHelpText>Grow</inlineHelpText>
        <label>Grow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maintain</description>
        <inlineHelpText>Maintain</inlineHelpText>
        <label>Maintain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shrink_Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shrink / Remove</description>
        <inlineHelpText>Shrink / Remove</inlineHelpText>
        <label>Shrink / Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SPM Store</description>
        <inlineHelpText>SPM Store</inlineHelpText>
        <label>Store Number</label>
        <referenceTo>SPM_Store__c</referenceTo>
        <relationshipName>Store_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Store_Number__c</columns>
        <columns>Account_Stores__c</columns>
        <columns>Grow__c</columns>
        <columns>Maintain__c</columns>
        <columns>Shrink_Remove__c</columns>
        <columns>Add__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>